--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -2,7 +2,7 @@
   margin: 2rem 0rem;
   padding: 0 5rem;
 }
-.head-container img {
+.head-container svg {
   cursor: pointer;
   display: flex;
   justify-content: center;
