--- a/css/modules/main.css
+++ b/css/modules/main.css
@@ -53,7 +53,7 @@
 .advantages-title-container {
   align-items: center;
   align-self: center;
-  background-image: url(/img/onda.svg);
+  background-image: var(--wave);
   color: var(--transparency);
   cursor: default;
   font-size: 4rem;
